# sales_app

./: .gitignore  Cargo.toml  README.md  cross_build.sh  sales_app.http
migrations/: 20260116180000_initial_schema.sql  20260116190000_add_message_sent.sql  20260116200000_add_follow_up_and_closed.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  scheduler.rs
